# fixing_good

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  README.md  sdl_libs_paths.cmake  utils.cmake
core/: CMakeLists.txt
core/framework_ish/: CMakeLists.txt  commonutils.h  specifictypes.h  strongtypes.h  vector2d.h
core/wrappers/: CMakeLists.txt  surface.cpp  surface.hpp  window.cpp  window.hpp
data/: README.md
designer/: CMakeLists.txt  designer.cpp  main.cpp
game/: CMakeLists.txt  compiler_error.cpp  game.cpp  main.cpp  player.cpp  player.hpp  resource_manager.h  resource_manager.hpp  texture_manager.cpp  texture_manager.h
game_prelude/: CMakeLists.txt  texture_manager.cpp  texture_manager.h
